Adding delete option
